comments, should be working!

--- a/public/tour.html
+++ b/public/tour.html
@@ -270,7 +270,7 @@
 								createJoystickUI()
 								createActionUI()
 							}
-							createCommentUI()
+							createCommentUI(modelObject)
 							createShortcutsUI()
 							checkUIExistence()
 						})
