database of scenes

--- a/public/tour.html
+++ b/public/tour.html
@@ -39,7 +39,7 @@
 			Reaction;
 			Trace highlight
 		*/
-		import { createConfigUI, createCommentUI, showLoadingGear, hideLoadingGear, createShortcutsUI, checkUIExistence, isMobileDevice, createExitUI, createJoystickUI, createActionUI, showMessage,createGuideUI } from './ui.js';
+		import { createConfigUI, createCommentUI, showLoadingGear, hideLoadingGear, createShortcutsUI, checkUIExistence, isMobileDevice, createExitUI, createJoystickUI, createActionUI, showMessage, createGuideUI, createScenesUI, Scene } from './ui.js';
 		import { fetchUserState, getAuthorInfoBySerial, getModelData_Cloud } from './script.js';
 		import { loadModel } from './load.js';
 		import { uploadWorld } from './upload.js';
@@ -227,6 +227,7 @@
 					createJoystickUI()
 					createActionUI()
 					createGuideUI()
+					createScenesUI()
 
 
 				} else {
@@ -265,6 +266,7 @@
 								createJoystickUI()
 								createActionUI()
 								createGuideUI()
+								createScenesUI()
 							} else {
 								console.log("[Validated] The user is Not the authur")
 								createConfigUI(modelObject, false, authorUID)
@@ -275,6 +277,7 @@
 							createCommentUI(modelObject)
 							createShortcutsUI()
 							createGuideUI()
+							createScenesUI()
 							checkUIExistence()
 						})
 					}
@@ -365,8 +368,6 @@
 			height: 100%;
 			touch-action: none;
 		}
-
-
 	</style>
 </head>
 
